--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,190 @@
-.App {
-  text-align: center;
+.App{
+  background-color: black;
+  color: white;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* FOR HEADER*/
+/*For Header Component*/
+.header{
+  margin: 0 2.5rem;
+  padding: .5rem 0;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+.headerLeft, .headerRight{
+  display: flex;
+  align-items:center;
+}
+.header__icon{
+  width: 80px;
+  cursor: pointer;
+}
+a span {
+  color: white;
+  margin: 0 30px;
+  cursor: pointer;
+  font-size: 1.3rem;
+
+
+}
+a span:hover{
+  color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* FOR HOME */
+
+
+.posterImage{
+  height: 550px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.posterImage > img {
+  margin: auto;
+  display: block;
+  width: 100%;
+}
+
+.posterImage__overlay {
+  position: absolute;
+  padding: 2rem;
+  bottom: 0px;
+  height: 70%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: flex-start;
+  background-image: linear-gradient(rgb(0,0,0,0), rgb(0,0,0,1));
+  /* background-color: brown; */
+  opacity: 1;
+  transition: opacity .3s;
+}   
+
+.posterImage__overlay:hover {
+  opacity: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.posterImage__title {
+  font-weight: 900;
+  font-size: 4rem;
+  margin-bottom: 0.4rem;
+  text-align: left;
+  /* background-color: aqua; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.posterImage__runtime {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  /* background-color: blue; */
+}
+
+.posterImage__rating {
+  margin-left: 3rem;
+  
+  /* background-color: black; */
+}
+.posterImage__rating i{
+  padding-left:0.3rem;
+
+}
+
+.posterImage__description {
+  font-style: italic;
+  font-size: 1rem;
+  margin-bottom: 0.25rem;
+  display: flex;
+  text-align: left;
+  width: 50%;
+  /* background-color: burlywood; */
+}
+
+/*For Card component*/
+.cards {
+  display: inline-block;
+  transition: transform .2s;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 0.19rem;
+  cursor:pointer;
+  min-width:200px;
+  height:300px;
+  z-index:0;
+  border: 1px solid rgb(99, 99, 99);
+}
+
+.cards:hover {
+  transform: scale(1.2);
+  z-index: 1000;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.cards__img {
+  height: 300px;
+}
+
+.cards__overlay {
+  position: absolute;
+  padding: 0 1rem 1rem 1rem;
+  bottom: 0px;
+  height: 290px;
+  display: flex;
+  flex-direction: column;
+  width: 85%;
+  justify-content: flex-end;
+  background-image: linear-gradient(rgb(0,0,0,0), rgb(0,0,0,1));
+  opacity: 0;
+  transition: opacity .2s;
+}   
+
+.cards__overlay:hover {
+  opacity: 1;
+}
+
+.cards__title {
+  /* background-color: red; */
+  font-weight: 900;
+  font-size: 1rem;
+  margin-bottom: 0.4rem;
+}
+
+.cards__runtime {
+  font-size: .75rem;
+  margin-bottom: 0.25rem;
+
+}
+.cards__runtime i{
+  padding-left: 0.2rem ;
+}
+
+
+.cards__rating{
+  /* background-color: blue; */
+  float: right;
+  font-size: 0.8rem;
+}
+
+.cards__description {
+  font-style: italic;
+  font-size: .75rem;
+  margin-bottom: 0.25rem;
+}
+
+/*FOR MOVIE LIST*/
+.movie__list {
+  padding: 0 3rem 3rem 3rem;
+}
+
+.list__title {
+font-size: 1.75rem;
+margin:  2.5rem;
+}
+
+.list__cards {
+  display: flex;
+  flex-wrap: wrap ;
+  justify-content: space-evenly;
 }
